--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [URL]
-GameName=WayPoint
+GameName=MyProject
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -21,6 +21,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/WayPoint")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/WayPoint")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/MyProject")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/MyProject")
 
